{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 94,
  "lineage": "aa5cdd7c-59f2-7abe-24f7-4668d6bea59f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f921f1e205c729a",
            "arn": "arn:aws:ec2:ap-south-1:941894778210:elastic-ip/eipalloc-08f921f1e205c729a",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-091ba70fc2300e640",
            "domain": "vpc",
            "id": "eipalloc-08f921f1e205c729a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d554831b7f946b79",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-232-253-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.253.126",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eafae0502a96fecb",
            "arn": "arn:aws:ec2:ap-south-1:941894778210:elastic-ip/eipalloc-0eafae0502a96fecb",
            "associate_with_private_ip": "10.0.3.50",
            "association_id": "eipassoc-0594f25a959e4a5bf",
            "domain": "vpc",
            "id": "eipalloc-0eafae0502a96fecb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09a7c6d7ab56a3f24",
            "private_dns": "ip-10-0-3-50.ap-south-1.compute.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-13-235-138-187.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.138.187",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_network_interface.nodejs-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:internet-gateway/igw-08118e1e2a5e26b15",
            "id": "igw-08118e1e2a5e26b15",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:network-interface/eni-0d554831b7f946b79",
            "id": "eni-0d554831b7f946b79",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:90:07:a4:90:d7",
            "owner_id": "941894778210",
            "private_dns_name": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "ap-south-1",
            "security_groups": [
              "sg-00f5e304b8454a8e9",
              "sg-02a2028f2c02251ee",
              "sg-06e61f3ddd189a726",
              "sg-0bef1b71edd9bf144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0456829151f097cad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:network-interface/eni-09a7c6d7ab56a3f24",
            "id": "eni-09a7c6d7ab56a3f24",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ac:37:52:81:e9",
            "owner_id": "941894778210",
            "private_dns_name": "ip-10-0-3-50.ap-south-1.compute.internal",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "region": "ap-south-1",
            "security_groups": [
              "sg-02a2028f2c02251ee",
              "sg-06e61f3ddd189a726",
              "sg-0b73ef1023c0a915b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c9f0bf836172ba9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:route-table/rtb-0ad452499e4313579",
            "id": "rtb-0ad452499e4313579",
            "owner_id": "941894778210",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08118e1e2a5e26b15",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "tags_all": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "rtb-0ad452499e4313579",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9553df434f50730",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ad452499e4313579",
            "subnet_id": "subnet-0456829151f097cad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "rtbassoc-0e9553df434f50730",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061b9391aa1037763",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ad452499e4313579",
            "subnet_id": "subnet-09c9f0bf836172ba9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "rtbassoc-061b9391aa1037763",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:security-group/sg-02a2028f2c02251ee",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a2028f2c02251ee",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "sg-02a2028f2c02251ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:security-group/sg-00f5e304b8454a8e9",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-00f5e304b8454a8e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "sg-00f5e304b8454a8e9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:security-group/sg-06e61f3ddd189a726",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-06e61f3ddd189a726",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "sg-06e61f3ddd189a726",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-staging-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:security-group/sg-0bef1b71edd9bf144",
            "description": "Allow Inbound traffic for security checks",
            "egress": [],
            "id": "sg-0bef1b71edd9bf144",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Staging",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow-stagin-traffic",
            "name_prefix": "",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "sg-0bef1b71edd9bf144",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:security-group/sg-0b73ef1023c0a915b",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0b73ef1023c0a915b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "sg-0b73ef1023c0a915b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:subnet/subnet-0456829151f097cad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0456829151f097cad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941894778210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Jenkins Subnet"
            },
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "subnet-0456829151f097cad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:subnet/subnet-09c9f0bf836172ba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9f0bf836172ba9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941894778210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "nodejs Web App Subnet"
            },
            "tags_all": {
              "Name": "nodejs Web App Subnet"
            },
            "vpc_id": "vpc-0f8b798cb74ea0f54"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "subnet-09c9f0bf836172ba9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.nodejs-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodejs-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941894778210:vpc/vpc-0f8b798cb74ea0f54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abacd50da03b9cf0",
            "default_route_table_id": "rtb-0b68c61907ec15166",
            "default_security_group_id": "sg-0fe5b33dccaa77e87",
            "dhcp_options_id": "dopt-0736d4ba6d38a1241",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8b798cb74ea0f54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b68c61907ec15166",
            "owner_id": "941894778210",
            "region": "ap-south-1",
            "tags": {
              "Name": "nodejs Web App VPC"
            },
            "tags_all": {
              "Name": "nodejs Web App VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941894778210",
            "id": "vpc-0f8b798cb74ea0f54",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}